--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Gatux!</title>
+  <title>Naruto Errepi!</title>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <center><h1>Naruto Errepi</h1><center>
+  <h2>Melhor server</h2>
     <div class="container">
   <img src="https://cdn.discordapp.com/emojis/477692818496815114.gif">
   <iframe src="https://discord.com/widget?id=780409102056030230&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
