--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>Melhor server</h2>
     <div class="bixo loko">
   <img src="https://cdn.discordapp.com/emojis/477692818496815114.gif">
-  <iframe src="https://discord.com/widget?id=780409102056030230&theme=dark" width="350" height="500</iframe>
+<iframe src="https://discord.com/widget?id=780409102056030230&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
        </div>
       </body>
     </html>
