--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <div class="bixo loko">
   <img src="https://cdn.discordapp.com/emojis/477692818496815114.gif">
         </div>
-    <div class="coisa do disc">
-<iframe src="https://discord.com/widget?id=780409102056030230&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-       </div>
+    <div class="honey">
+    img src="https://cdn.discordapp.com/attachments/825837611897454603/828390380390842388/unknown.png">
       </body>
     </html>
   
